# go-trader

./: .dockerignore  .env.template  .gitignore  Dockerfile  economic-cartogrophy.tsx  go.mod  go.sum  go.work  go.work.sum  index.html  main.go  makefile  readme.md  run-tests.bat  run-tests.sh  style.css  technical_requirements_document.md
algorithm/: adapter.go  algorithm.go  algorithm_api.go  algorithm_handler.go  go.mod  go.sum  history.go  history_adapter.go  recommendations.go  status.go  timeframe.go
algorithm/algo/: algorithm_interface.go  algorithm_manager.go  claude_adapter.go  cusum_filter.go  entropy_pooling.go  fractional_diff.go  fractional_diff_test.go  go.mod  hrp.go  meta_labeling.go  meta_labeling_test.go  mvo.go  position_sizing.go  position_sizing_test.go  purged_cv.go  purged_cv_test.go  sequential_bootstrap.go  sequential_bootstrap_test.go  sequential_bootstrap_utils.go  triple_barrier.go  triple_barrier_test.go
cartography/: cartography.go  cartography_test.go  feed.go  fred.go  fred_test.go  vault.go  vault_test.go  watcher.go  watcher_test.go
claude/: adapter_wrapper.go  claude.go  claude_compat.go  claude_handler.go  go.mod  http_adapter.go  websocket_adapter.go
deploy/: README.md  app-secret.sh  apply.sh  build-and-push.sh  deployment.yaml  dns.sh  namespace.yaml  pull-secret.sh  tunnel-route.sh
features/: current_state_vs_new_requirements.md  index.md  lopez-de-prado-implementation-plan.md  sequential-bootstrap-plan.md
notification/: notification.go  notification_handler.go
rust-trader/: Cargo.toml
rust-trader/crates/algo/: Cargo.toml
rust-trader/crates/algo/src/: lib.rs
rust-trader/crates/algorithm/: Cargo.toml
rust-trader/crates/algorithm/src/: algorithm.rs  lib.rs  local_signal.rs  model_signal.rs  types.rs
rust-trader/crates/algorithm/src/strategy/: arbitrator.rs  mean_reversion.rs  mod.rs  momentum_breakout.rs  trend_following.rs
rust-trader/crates/backtest/: Cargo.toml
rust-trader/crates/backtest/src/: engine.rs  lib.rs  report.rs
rust-trader/crates/cartography/: Cargo.toml
rust-trader/crates/cartography/src/: feed.rs  fred.rs  lib.rs  vault.rs  watcher.rs
rust-trader/crates/indicators/: Cargo.toml
rust-trader/crates/indicators/src/: adx.rs  atr.rs  bollinger.rs  builder.rs  composite.rs  lib.rs  macd.rs  moving_average.rs  rsi.rs  stochastic.rs  types.rs  vwap.rs
rust-trader/crates/notification/: Cargo.toml
rust-trader/crates/notification/src/: lib.rs
rust-trader/crates/ticker/: Cargo.toml
rust-trader/crates/ticker/src/: basket.rs  lib.rs
rust-trader/crates/types/: Cargo.toml
rust-trader/crates/types/src/: lib.rs
rust-trader/src/: alpaca_rest.rs  alpaca_stream.rs  audit_store.rs  bar_buffer.rs  http_handlers.rs  main.rs
ticker/: basket.go  go.mod  go.sum  ticker.go
types/: algorithm.go  go.mod  market_data.go  trade_signal.go
web-ui/: index.html  package-lock.json  package.json
web-ui/scripts/: test-api.mjs  test-ui.mjs
web-ui/src/: cartography.css  cartography.jsx  main.jsx  styles.css
web-ui/src/components/: ApiStatus.jsx  AuditTrail.jsx  BrokerSummary.jsx  DebugView.jsx  ModeBanner.jsx  OperatorStatus.jsx  RawDataGrid.jsx  SignalSummary.jsx  StrategyView.jsx  common.jsx
web-ui/src/components/cartography/: BandRow.jsx  BandsSection.jsx  CartographyFooter.jsx  CartographyHeader.jsx  ChartSection.jsx  CompositeChart.jsx  HerePanel.jsx  LiveDataPanel.jsx  PhaseWheel.jsx  TimeNavigator.jsx
web-ui/src/lib/: api.js  cartographyData.js  format.js
