[package]
name = "go-trader-ticker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
go-trader-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
tracing.workspace = true
rust_decimal.workspace = true
